# Ai-Agents

./: .gitignore  README.md  pyproject.toml
Basic-Tool-Agent/: basic_agent.py  wikipedia_tool_agent.py
DocChat-MultiAgent_RAG/: app.py  builder.py  file_handler.py  relevance_checker.py  research_agent.py  verification_agent.py  workflow.py
DocChat-MultiAgent_RAG/note/: WhyDocling.txt
src/Basic-Tool-Agent/: basic_agent.py  basic_tool.py  math_agent.py
src/Data-Analytic tool/: Data_Visualization_Agent.py  datawizard.py  naturalLang_to_dataVisualization.py
src/Data-Analytic tool/DataSets/Student Alcohol Consumption DataSet/: Attributes for both student-mat.csv and student-por.csv.txt
src/LangChain SQL-Agent/: sql_agent_basic.py
src/LangGraph-Basic/: Basic-QA-WorkFlow.py  LG-Basic.py  LangGraph-Basic.py  ReAct-Agent.py  ReflectionAgent.py  ReflexionAgent.py  langGraph.txt
src/LangGraph-Basic/note/: Reflection agents -VS-Reflexion agents.txt  ReflectionAgent.txt  langGraph.txt
src/Manual-Tool-Calling/: basic_manual _tool_calling.py
